--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,56 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Futura Bold";
+  src: url("./assets/Fonts//FuturaPTBold.otf");
+}
+@font-face {
+  font-family: "Futura Book";
+  src: url("./assets/Fonts//FuturaPTBook.otf");
+}
+@font-face {
+  font-family: "Futura CondBold";
+  src: url("./assets/Fonts//FuturaPTCondBold.otf");
+}
+@font-face {
+  font-family: "Futura CondBook";
+  src: url("./assets/Fonts//FuturaPTCondBook.otf");
+}
+@font-face {
+  font-family: "Futura CondExtraBold";
+  src: url("./assets/Fonts//FuturaPTCondExtraBold.otf");
+}
+@font-face {
+  font-family: "Futura Medium";
+  src: url("./assets/Fonts//FuturaPTMedium.otf");
+}
+@font-face {
+  font-family: "Futura Demi";
+  src: url("./assets/Fonts//FuturaPTDemi.otf");
+}
+@font-face {
+  font-family: "Roboto ExtraBold";
+  src: url("./assets/Fonts//FuturaPTExtraBold.otf");
+}
+@font-face {
+  font-family: "Futura Heavy";
+  src: url("./assets/Fonts//FuturaPTHeavy.otf");
+}
+@font-face {
+  font-family: "Futura Light";
+  src: url("./assets/Fonts//FuturaPTLight.otf");
+}
+@font-face {
+  font-family: "Futura Medium";
+  src: url("./assets/Fonts//FuturaPTMedium.otf");
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
